# SeaCaml

./: DevLog.md  FinalProgress.key  Progress_1.key  README.md  dune-project
_kaist_cs420/: DevLog.md  FinalProgress.key
example/: array_assign.c  array_decl.c  assume.c  fibo.c  funccall.c  if_readvar.c  plusplus.c  print  print.asm  show_array.c  simple.c
examples/: compound.c  desugar.c  given.c  if.c  progress.c  recursive.c  shadow.c  simple.c  string_lit.c  syntax.c
src/: ast.ml  coreAst.ml  desugar.ml  dune  interp.ml  lexer.mll  main.ml  parser.mly  stringify.ml  typecheck.ml  utils.ml
