(executable
 (public_name SeaCaml)
 (name main)
 (modules main)
 (libraries SeaCaml))

(library
 (name SeaCaml)
 (modules utils coreAst Ast lexer parser stringify typecheck interp desugar)
 (libraries menhirLib ppx_compare)
 (preprocess (pps ppx_compare)))

(menhir
 (modules parser))

(ocamllex
 (modules lexer))
